--- a/apps/embedded-catalog/react/package.json
+++ b/apps/embedded-catalog/react/package.json
@@ -20,7 +20,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@panora/shared": "workspace:^",
+    "@panora/shared": "4.0.0",
     "@tanstack/react-query": "^5.12.2",
     "react-loader-spinner": "^5.4.5"
   },
