migrate shared package from nodejs to nestjs module

--- a/packages/shared/.prettierrc
+++ b/packages/shared/.prettierrc
@@ -1,9 +1,4 @@
 {
-  "semi": true,
-  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true
+  "trailingComma": "all"
 }
